<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorOne">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sixteen"
                app:cardBackgroundColor="@color/trans"
                app:cardCornerRadius="@dimen/eight"
                app:cardElevation="@dimen/thirty">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/five"
                        app:cardBackgroundColor="@color/transTwo"
                        app:cardCornerRadius="@dimen/eight">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/five"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/five"
                                android:text="@string/headingDiscription"
                                android:textColor="@color/black"
                                android:textSize="@dimen/twenty" />

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/eight"
                                android:adjustViewBounds="true"
                                android:maxHeight="@dimen/hundered"
                                android:scaleType="centerInside"
                                app:srcCompat="@drawable/lock" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/five"
                        app:cardBackgroundColor="@color/transTwo"
                        app:cardCornerRadius="@dimen/eight">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/five"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/five"
                                android:text="@string/chooseLvl"
                                android:textColor="@color/black"
                                android:textSize="@dimen/headingTxt" />

                            <RadioGroup
                                android:id="@+id/optionGroup"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <RadioButton
                                    android:id="@+id/weakLvl"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/weak" />

                                <RadioButton
                                    android:id="@+id/normalLvl"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/normal" />

                                <RadioButton
                                    android:id="@+id/strongLvl"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/strong" />
                            </RadioGroup>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/eight"
                        app:cardBackgroundColor="@color/transTwo"
                        app:cardCornerRadius="@dimen/eight">

                        <EditText
                            android:id="@+id/keyword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/five"
                            android:ems="10"
                            android:hint="@string/keywordHInt"
                            android:inputType="textPersonName" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/createBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@string/create"
                app:icon="@drawable/create" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/twenty"
                app:cardBackgroundColor="@color/trans"
                app:cardCornerRadius="@dimen/eight">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/eight"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/transTwo"
                        app:cardCornerRadius="@dimen/eight">

                        <TextView
                            android:id="@+id/passwordDis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/five"
                            android:text="@string/passwordField"
                            android:textSize="@dimen/passSize" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/copyBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/eight"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/transTwo"
                        app:cardCornerRadius="@dimen/eight">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/five"
                            android:adjustViewBounds="true"
                            android:maxWidth="70dp"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/copy" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>